--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <header>
         <a href="#">
-            <img src="/img/logo.svg" alt="logo zoom">
+            <img src="./img/logo.svg" alt="logo zoom">
         </a>
 
         <nav>
@@ -42,7 +42,7 @@
 
         <section id="capa-imagem">
 
-            <img src="/img/capa.png" alt="">
+            <img src="./img/capa.png" alt="">
 
         </section>
 
@@ -50,7 +50,7 @@
 
          <section id="organizacao-imagem">
 
-            <img src="/img/organizacoes.png" alt="">
+            <img src="./img/organizacoes.png" alt="">
 
         </section>
 
