Ajustes na responsa.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>      
         </nav>
 
-        <div>
+        <div class="botões">
             <a class="botao" href="#">Entrar em contato</a>
             <a class="botao destaque" href="#">Inscreva-se</a>
         </div>
